--- a/test-output/old/API automation/classes.html
+++ b/test-output/old/API automation/classes.html
@@ -11,19 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>MyProfile</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Registration</td>
+<td>Upload_Profile_Picture</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>Login</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Changepassword</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
