--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,10 +8,10 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">FREE CRM Application Test Automation Test Suite</th></tr>
-<tr><td><a href="#t0">API automation Test Cases</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">2,301</td><td></td><td></td></tr>
+<tr><th colspan="7">API automation</th></tr>
+<tr><td><a href="#t0">API automation Test Cases</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">2,486</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">FREE CRM Application Test Automation Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">API automation Test Cases &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Request.TC002_POST_Request</td><td><a href="#m0">Upload_Profile_Picture</a></td><td rowspan="1">1575271339378</td><td rowspan="1">16</td></tr><tr><th colspan="4">API automation Test Cases &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Request.TC002_POST_Request</td><td><a href="#m1">Login</a></td><td rowspan="1">1575271337111</td><td rowspan="1">2265</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">API automation</th></tr></tbody><tbody id="t0"><tr><th colspan="4">API automation Test Cases &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Request.TC002_POST_Request</td><td><a href="#m0">Upload_Profile_Picture</a></td><td rowspan="1">1575351186670</td><td rowspan="1">18</td></tr><tr><th colspan="4">API automation Test Cases &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Request.TC002_POST_Request</td><td><a href="#m1">Login</a></td><td rowspan="1">1575351184225</td><td rowspan="1">2427</td></tr></tbody>
 </table>
 <h2>API automation Test Cases</h2><h3 id="m0">Request.TC002_POST_Request#Upload_Profile_Picture</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: Don&apos;t know how to encode {&quot;image&quot;:&quot;\/Users\/perry.gami\/Documents\/GitHub\/Cucumber\/API-Automation-Demo\/Test_yourself.png&quot;} as a byte stream.
 
