--- a/test-output/index.html
+++ b/test-output/index.html
@@ -37,8 +37,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-FREE_CRM_Application_Test_Automation_Test_Suite" class="navigator-link">
-              <span class="suite-name border-failed">FREE CRM Application Test Automation Test Suite</span>
+            <a href="#" panel-name="suite-API_automation" class="navigator-link">
+              <span class="suite-name border-failed">API automation</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-FREE_CRM_Application_Test_Automation_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="test-xml-API_automation" class="navigator-link ">
                     <span>API_run.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-FREE_CRM_Application_Test_Automation_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="testlist-API_automation" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-FREE_CRM_Application_Test_Automation_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="group-API_automation" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-FREE_CRM_Application_Test_Automation_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="times-API_automation" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-FREE_CRM_Application_Test_Automation_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="reporter-API_automation" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-FREE_CRM_Application_Test_Automation_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-API_automation" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-FREE_CRM_Application_Test_Automation_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="chronological-API_automation" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -96,30 +96,30 @@
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
                     <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-FREE_CRM_Application_Test_Automation_Test_Suite" class="hide-methods failed suite-FREE_CRM_Application_Test_Automation_Test_Suite"> (hide)</a> <!-- hide-methods failed suite-FREE_CRM_Application_Test_Automation_Test_Suite -->
-                      <a href="#" panel-name="suite-FREE_CRM_Application_Test_Automation_Test_Suite" class="show-methods failed suite-FREE_CRM_Application_Test_Automation_Test_Suite"> (show)</a> <!-- show-methods failed suite-FREE_CRM_Application_Test_Automation_Test_Suite -->
+                      <a href="#" panel-name="suite-API_automation" class="hide-methods failed suite-API_automation"> (hide)</a> <!-- hide-methods failed suite-API_automation -->
+                      <a href="#" panel-name="suite-API_automation" class="show-methods failed suite-API_automation"> (show)</a> <!-- show-methods failed suite-API_automation -->
                     </span>
-                    <div class="method-list-content failed suite-FREE_CRM_Application_Test_Automation_Test_Suite">
+                    <div class="method-list-content failed suite-API_automation">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-FREE_CRM_Application_Test_Automation_Test_Suite" title="Request.TC002_POST_Request" class="method navigator-link" hash-for-method="Upload_Profile_Picture">Upload_Profile_Picture</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-API_automation" title="Request.TC002_POST_Request" class="method navigator-link" hash-for-method="Upload_Profile_Picture">Upload_Profile_Picture</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-FREE_CRM_Application_Test_Automation_Test_Suite -->
+                    </div> <!-- method-list-content failed suite-API_automation -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-FREE_CRM_Application_Test_Automation_Test_Suite" class="hide-methods passed suite-FREE_CRM_Application_Test_Automation_Test_Suite"> (hide)</a> <!-- hide-methods passed suite-FREE_CRM_Application_Test_Automation_Test_Suite -->
-                      <a href="#" panel-name="suite-FREE_CRM_Application_Test_Automation_Test_Suite" class="show-methods passed suite-FREE_CRM_Application_Test_Automation_Test_Suite"> (show)</a> <!-- show-methods passed suite-FREE_CRM_Application_Test_Automation_Test_Suite -->
+                      <a href="#" panel-name="suite-API_automation" class="hide-methods passed suite-API_automation"> (hide)</a> <!-- hide-methods passed suite-API_automation -->
+                      <a href="#" panel-name="suite-API_automation" class="show-methods passed suite-API_automation"> (show)</a> <!-- show-methods passed suite-API_automation -->
                     </span>
-                    <div class="method-list-content passed suite-FREE_CRM_Application_Test_Automation_Test_Suite">
+                    <div class="method-list-content passed suite-API_automation">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-FREE_CRM_Application_Test_Automation_Test_Suite" title="Request.TC002_POST_Request" class="method navigator-link" hash-for-method="Login">Login</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-API_automation" title="Request.TC002_POST_Request" class="method navigator-link" hash-for-method="Login">Login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-FREE_CRM_Application_Test_Automation_Test_Suite -->
+                    </div> <!-- method-list-content passed suite-API_automation -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -130,8 +130,8 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-FREE_CRM_Application_Test_Automation_Test_Suite" class="panel FREE_CRM_Application_Test_Automation_Test_Suite">
-          <div class="suite-FREE_CRM_Application_Test_Automation_Test_Suite-class-failed">
+        <div panel-name="suite-API_automation" class="panel API_automation">
+          <div class="suite-API_automation-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
               <span class="class-name">Request.TC002_POST_Request</span>
@@ -203,8 +203,8 @@ For example: &quot;given().config(RestAssured.config().encoderConfig(encoderConf
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-FREE_CRM_Application_Test_Automation_Test_Suite-class-failed -->
-          <div class="suite-FREE_CRM_Application_Test_Automation_Test_Suite-class-passed">
+          </div> <!-- suite-API_automation-class-failed -->
+          <div class="suite-API_automation-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">Request.TC002_POST_Request</span>
@@ -218,9 +218,9 @@ For example: &quot;given().config(RestAssured.config().encoderConfig(encoderConf
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-FREE_CRM_Application_Test_Automation_Test_Suite-class-passed -->
-        </div> <!-- panel FREE_CRM_Application_Test_Automation_Test_Suite -->
-        <div panel-name="test-xml-FREE_CRM_Application_Test_Automation_Test_Suite" class="panel">
+          </div> <!-- suite-API_automation-class-passed -->
+        </div> <!-- panel API_automation -->
+        <div panel-name="test-xml-API_automation" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">/Users/perry.gami/Documents/GitHub/Cucumber/API-Automation-Demo/src/main/java/Runclass/API_run.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -228,7 +228,7 @@ For example: &quot;given().config(RestAssured.config().encoderConfig(encoderConf
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;FREE CRM Application Test Automation Test Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+&lt;suite name=&quot;API automation&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;ExtendReport.ExtentReporterNG&quot;/&gt;
   &lt;/listeners&gt;
@@ -237,13 +237,13 @@ For example: &quot;given().config(RestAssured.config().encoderConfig(encoderConf
       &lt;class name=&quot;Request.TC002_POST_Request&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- API automation Test Cases --&gt;
-&lt;/suite&gt; &lt;!-- FREE CRM Application Test Automation Test Suite --&gt;
+&lt;/suite&gt; &lt;!-- API automation --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-FREE_CRM_Application_Test_Automation_Test_Suite" class="panel">
+        <div panel-name="testlist-API_automation" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for FREE CRM Application Test Automation Test Suite</span>
+            <span class="header-content">Tests for API automation</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
@@ -253,22 +253,22 @@ For example: &quot;given().config(RestAssured.config().encoderConfig(encoderConf
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-FREE_CRM_Application_Test_Automation_Test_Suite" class="panel">
+        <div panel-name="group-API_automation" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for FREE CRM Application Test Automation Test Suite</span>
+            <span class="header-content">Groups for API automation</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-FREE_CRM_Application_Test_Automation_Test_Suite" class="panel">
+        <div panel-name="times-API_automation" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for FREE CRM Application Test Automation Test Suite</span>
+            <span class="header-content">Times for API automation</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_FREE_CRM_Application_Test_Automation_Test_Suite');
-function tableData_FREE_CRM_Application_Test_Automation_Test_Suite() {
+suiteTableInitFunctions.push('tableData_API_automation');
+function tableData_API_automation() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
@@ -278,36 +278,36 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Login')
 data.setCell(0, 2, 'Request.TC002_POST_Request')
-data.setCell(0, 3, 2265);
+data.setCell(0, 3, 2427);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'Upload_Profile_Picture')
 data.setCell(1, 2, 'Request.TC002_POST_Request')
-data.setCell(1, 3, 16);
-window.suiteTableData['FREE_CRM_Application_Test_Automation_Test_Suite']= { tableData: data, tableDiv: 'times-div-FREE_CRM_Application_Test_Automation_Test_Suite'}
+data.setCell(1, 3, 18);
+window.suiteTableData['API_automation']= { tableData: data, tableDiv: 'times-div-API_automation'}
 return data;
 }
               </script>
               <span class="suite-total-time">Total running time: 2 seconds</span>
-              <div id="times-div-FREE_CRM_Application_Test_Automation_Test_Suite">
-              </div> <!-- times-div-FREE_CRM_Application_Test_Automation_Test_Suite -->
+              <div id="times-div-API_automation">
+              </div> <!-- times-div-API_automation -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-FREE_CRM_Application_Test_Automation_Test_Suite" class="panel">
+        <div panel-name="reporter-API_automation" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for FREE CRM Application Test Automation Test Suite</span>
+            <span class="header-content">Reporter output for API automation</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-FREE_CRM_Application_Test_Automation_Test_Suite" class="panel">
+        <div panel-name="ignored-methods-API_automation" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-FREE_CRM_Application_Test_Automation_Test_Suite" class="panel">
+        <div panel-name="chronological-API_automation" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -322,7 +322,7 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">Upload_Profile_Picture</span>
-                <span class="method-start">2267 ms</span>
+                <span class="method-start">2445 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
